--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ ENIGMAsystem/SHELL/.objs
 *.res
 MacOS/build/Release/EnigmaXcode.app/Contents/Info.plist
 MacOS/build/Release/EnigmaXcode.app/Contents/Resources/*
+*.stackdump
