Moving the c++11 compiler flag to the mac's ey files

--- a/ENIGMAsystem/SHELL/Makefile
+++ b/ENIGMAsystem/SHELL/Makefile
@@ -61,14 +61,14 @@ CC := gcc
 DEPENDENCIES :=
 
 ifeq ($(GMODE), Debug)
-	override CXXFLAGS += -Wall -std=c++11 -g -DDEBUG_MODE
+	override CXXFLAGS += -Wall -g -DDEBUG_MODE
 	override CFLAGS += -Wall -g -DDEBUG_MODE
 else ifeq ($(GMODE), Compile)
-	override CXXFLAGS += -Wall -std=c++11 -s -O3 -fno-rtti -fno-exceptions -flto -fdata-sections -ffunction-sections
+	override CXXFLAGS += -Wall -s -O3 -fno-rtti -fno-exceptions -flto -fdata-sections -ffunction-sections
 	override CFLAGS += -Wall -s -O3 -flto -fno-exceptions -fdata-sections -ffunction-sections
 	override LDFLAGS += -flto -s -O3
 else
-	override CXXFLAGS += -Wall -std=c++11 -s -O3 -fno-rtti -fno-exceptions
+	override CXXFLAGS += -Wall -s -O3 -fno-rtti -fno-exceptions
 	override CFLAGS += -Wall -s -O3 -fno-exceptions
 endif
 
