Fix the Travis build (#1077)
1) Fixes stack parameterized with `T` but a backing container of `vector<T*>`; now users `T*` in both places.
2) Each compiler now gets its own object folder, eliminating the need to rebuild on a simple compiler switch.
3) Fixes typo in `clang32.ey` where `ldlags` should have been `ldflags`
4) Fixes GTK+ by copying the `CFLAGS` override for `CXXFLAGS`
5) Fixes the Matrix Math extension by renaming the folder from `Matrix` to `MatrixMath`, which matches the `Identifier:` specified in the `About.ey` file. The problem has actually existed since the extension was created, but only surfaced after changes in RobertBColton/enigma-dev@73a71705c8b8c54e3a523a4d2a68527f6e599c6a, which made the IDE plugin consistent with the compiler about which field is human-readable and which is not.
6) Same fix as (5) for Box2D—rename the folder from `Box2D` to `Box2DPhysics` so that it matches the identifier.
7) Cleans up the async extension formatting and fixes a bug that caused Travis to fail (global `async_load` was statically initialized to a data structure, but the data structure storage container was not yet initialized; solution was to move the `ds_map_create` call into `createThread` so it's not created until it's first needed).
   The extension seems to be working again, including events. Removed the DataStructures extension from the Asynchronous extension's makefile because that's not correct. Additionally, changed the travis.yml to only test Asynchronous extension with DataStructures extension also enabled.
8) Made the JSON extension build again, but it looks as though it never worked to begin with. Removed the flags that were enabling exceptions, because ENIGMA does not use exceptions.
9) Fixed some errors in the Berkeley sockets networking system related to `recvfrom` and `getsockname` types. On Windows they take an `int` and on Linux they take `socklen_t`, which can be `size_t` (64-bit).
10) Cleans up the `None` audio system and provides

--- a/ENIGMAsystem/SHELL/Universal_System/Extensions/BulletDynamics/Makefile
+++ b/ENIGMAsystem/SHELL/Universal_System/Extensions/BulletDynamics/Makefile
@@ -1,2 +1,9 @@
-SOURCES += $(wildcard Universal_System/Extensions/BulletDynamics/*.cpp) 
-LDLIBS += -lBulletSoftBody -lBulletDynamics -lBulletCollision -lLinearMath
+SOURCES += $(wildcard Universal_System/Extensions/BulletDynamics/*.cpp)
+
+ifeq ($(PLATFORM), xlib)
+	override CFLAGS += $(shell pkg-config --cflags bullet)
+	override CXXFLAGS += $(shell pkg-config --cflags bullet)
+	LDLIBS += $(shell pkg-config --libs bullet)
+else
+	LDLIBS += -lBulletSoftBody -lBulletDynamics -lBulletCollision -lLinearMath
+endif
