--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - sudo apt-get install build-essential g++ clang-3.5 libglu1-mesa-dev zlib1g-dev libalure-dev libvorbisfile3 libvorbis-dev 
       libdumb1-dev libboost-all-dev libc++-dev libsfml-dev libgtk2.0-dev libbullet-dev libbox2d-dev libgme-dev gcc-multilib 
       g++-multilib libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1-dev libglu1-mesa:i386 libx11-6:i386  libc++-dev:i386
-      mingw-w64
+      mingw-w64 wine
   
   # Ubuntu is a turd
   - sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so
@@ -25,9 +25,6 @@ before_install:
   
 install:
   - chmod +x ./travis.sh
-  - curl -L https://github.com/fundies/enigma-libs/files/1345933/enigma-libs.zip > enigma-libs.zip
-  - unzip enigma-libs.zip -d enigma-dev/ENIGMAsystem/
-  - mv enigma-dev/ENIGMAsystem/Install enigma-dev/ENIGMAsystem/Additional
   - make
   - make emake
 
@@ -81,5 +78,8 @@ env:
     - COMPILER=MinGW64 PLATFORM=Win32 MODE=Run GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
   #END LINUX
 script:
+  - curl -L https://github.com/fundies/enigma-libs/files/1345933/enigma-libs.zip > enigma-libs.zip
+  - unzip enigma-libs.zip -d enigma-dev/ENIGMAsystem/
+  - mv enigma-dev/ENIGMAsystem/Install enigma-dev/ENIGMAsystem/Additional
   - ./travis.sh
 
