--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,11 @@
 platform:
   - x64
 environment:
-  global:
-    MSYS2_BASEVER: 20150512
   matrix:
     - MSYS2_ARCH: x86_64
 install:
-  - appveyor DownloadFile "http://kent.dl.sourceforge.net/project/msys2/Base/%MSYS2_ARCH%/msys2-base-%MSYS2_ARCH%-%MSYS2_BASEVER%.tar.xz" -FileName "msys2.tar.xz"
-  - 7z x msys2.tar.xz
+  - appveyor DownloadFile "https://sourceforge.net/projects/msys2/files/latest/download?source=files" -FileName "msys2.exe"
+  - msys2
   - 7z x msys2.tar > NUL
   - msys64\usr\bin\bash -lc ""
   - msys64\usr\bin\bash -lc "for i in {1..3}; do pacman --noconfirm -Suy autoconf automake pkg-config gcc make zlib-devel && break || sleep 15; done"
