--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ environment:
     - MSYS2_ARCH: x86_64
 install:
   - appveyor DownloadFile "https://sourceforge.net/projects/msys2/files/latest/download?source=files" -FileName "msys2.exe"
-  - appveyor DownloadFile "https://github.com/msys2/msys2-installer/blob/master/auto-install.js" -FileName "auto-install.js"
+  - appveyor DownloadFile "https://raw.githubusercontent.com/msys2/msys2-installer/master/auto-install.js" -FileName "auto-install.js"
   - msys2 --platform minimal --script auto-install.js -v
   - 7z x msys2.tar > NUL
   - msys64\usr\bin\bash -lc ""
