--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ install:
   - appveyor DownloadFile "https://sourceforge.net/projects/msys2/files/latest/download?source=files" -FileName "msys2.exe"
   - appveyor DownloadFile "https://raw.githubusercontent.com/msys2/msys2-installer/master/auto-install.js" -FileName "auto-install.js"
   - msys2 --platform minimal --script auto-install.js -v
-  - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Syu"
+  - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Syu --force"
   - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -S base-devel git mingw-w64-x86_64-toolchain mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-zlib mingw-w64-x86_64-libffi mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet"
 build_script:
   - msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER; exec 0</dev/null; ./autogen.sh; ./configure; make"
