--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ environment:
   matrix:
     - MSYS2_ARCH: x86_64
 install:
+  - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Syu"
   - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Su"
   - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Su base-devel git mingw-w64-x86_64-toolchain mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-zlib mingw-w64-x86_64-libffi mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet"
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
