--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,10 @@ environment:
     - MSYS2_ARCH: x86_64
 install:
   - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Syu"
+  - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Syu"
+  - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
+  - pacman --noconfirm -Syu
+  - pacman --noconfirm -Syu
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
   - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Su"
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
