--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,12 @@ environment:
   matrix:
     - MSYS2_ARCH: x86_64
 install:
+  - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm --sync --refresh --refresh pacman"
+  - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
+  - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade"
+  - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
   - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Syu"
+  - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
   - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Syu"
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
   - pacman --noconfirm -Syu
