--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,11 +4,11 @@ environment:
   matrix:
     - MSYS2_ARCH: x86_64
 install:
-  - C:\msys64\usr\bin\bash.exe -lc "pacman -Sy"
+  - C:\msys64\usr\bin\bash.exe -lc "pacman -Syyuu --noconfirm"
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
-  - C:\msys64\usr\bin\bash.exe -lc "pacman update-core"
+  - C:\msys64\usr\bin\bash.exe -lc "pacman -Syyuu --noconfirm"
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
-  - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Syu"
+  - C:\msys64\usr\bin\bash.exe -lc "pacman -Syyuu --noconfirm"
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
   - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Syu"
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
