--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,16 +4,15 @@ environment:
   matrix:
     - MSYS2_ARCH: x86_64
 install:
-  - C:\msys64\usr\bin\bash.exe -lc "pacman -Syyuu --noconfirm"
+  - set PATH=c:\msys64\usr\bin;%PATH%
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
-  - C:\msys64\usr\bin\bash.exe -lc "pacman -Syyuu --noconfirm"
+  - C:\msys64\usr\bin\bash.exe -lc "pacman -Syu --noconfirm"
+  - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
+  - C:\msys64\usr\bin\bash.exe -lc "pacman -Syu--noconfirm"
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
   - C:\msys64\usr\bin\bash.exe -lc "pacman -Syyuu --noconfirm"
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
   - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Syu"
-  - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
-  - pacman --noconfirm -Syu
-  - pacman --noconfirm -Syu
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
   - C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Su"
   - C:\msys64\usr\bin\bash.exe -lc "gcc -v"
