--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ environment:
     - MSYS2_ARCH: x86_64
 install:
   - set PATH=c:\msys64\usr\bin;%PATH%
-  - bash -lc "rm -rf /var/lib/pacman/local/filesystem-2017.05-1/"
+  - rmdir C:/msys64/var/lib/pacman/local/filesystem-2017.05-1/
   - appveyor DownloadFile "https://sourceforge.net/projects/msys2/files/latest/download?source=files" -FileName "msys2.exe"
   - appveyor DownloadFile "https://raw.githubusercontent.com/msys2/msys2-installer/master/auto-install.js" -FileName "auto-install.js"
   - msys2 --platform minimal --script auto-install.js -v
