--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ environment:
   matrix:
     - MSYS2_ARCH: x86_64
 install:
+  - C:\msys64\usr\bin\pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade
   - rmdir /S /Q C:\msys64
   - appveyor DownloadFile "https://sourceforge.net/projects/msys2/files/latest/download?source=files" -FileName "msys2.exe"
   - appveyor DownloadFile "https://raw.githubusercontent.com/msys2/msys2-installer/master/auto-install.js" -FileName "auto-install.js"
