--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,4 +17,4 @@ install:
   - gcc -v
 build_script:
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4"
-  - bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
+  - C:\msys64\msys2.exe -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
