--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,16 @@ cache:
   - CompilerSource\.eobjs -> CompilerSource
   - CommandLine\emake\.eobjs -> CommandLine\emake
 install:
-  - set PATH=C:\msys64\mingw64\include;c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
+  - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
+  - set MSYSTEM=MINGW64
+  - set MSYSTEM_PREFIX=/mingw64
+  - set MSYSTEM_CHOST=x86_64-w64-mingw32
+  - set CONFIG_SITE=/mingw64/etc/config.site
+  - set MINGW_PACKAGE_PREFIX=mingw-w64-x86_64
+  - set MINGW_PREFIX=/mingw64
+  - set MINGW_CHOST=x86_64-w64-mingw32
+  - set PKG_CONFIG_PATH=/mingw64/lib/pkgconfig:/mingw64/share/pkgconfig
+  
   - pacman --noconfirm -S base-devel git mingw-w64-x86_64-toolchain mingw-w64-x86_64-boost mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-libvorbis mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-zlib mingw-w64-x86_64-libffi mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
   - gcc -v
 build_script:
