--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,9 +9,7 @@ environment:
   matrix:
   #BEGIN WINDOWS
     # Game Modes
-    - COMPILER=gcc PLATFORM=win32 MODE=Run GRAPHICS=Direct3D9 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-    - COMPILER=gcc PLATFORM=win32 MODE=Debug GRAPHICS=Direct3D9 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-    - COMPILER=gcc PLATFORM=win32 MODE=Compile GRAPHICS=Direct3D9 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
+    - COMPILER:gcc PLATFORM:Win32 MODE:Run GRAPHICS:Direct3D9 AUDIO:None COLLISION:None NETWORK:None WIDGETS:None EXTENSIONS:"None"
   #END WINDOWS
 cache:
   - CompilerSource\.eobjs -> CompilerSource
