--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,4 +30,4 @@ install:
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4"
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
 build_script:
-  - ./ci-build.sh
+  - bash -lc "./ci-build.sh"
