--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,8 @@ install:
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4"
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
 build_script:
+  - bash -lc "echo $AUDIO"
+  - bash -lc "echo \"$audio\""
+  - bash -lc "echo \"$AUDIO\""
   - echo $(AUDIO)
-  - bash -lc "echo $audio"
   - emake --compiler $(COMPILER) --mode $(MODE) --platform $(PLATFORM) --graphics $(GRAPHICS) --audio $(AUDIO) --collision $(COLLISION) --network $(NETWORK) --widgets $(WIDGETS) --extensions $(EXTENSIONS) -o /tmp/test
