--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,9 +30,6 @@ install:
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4"
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
 build_script:
-  - bash -lc "echo $AUDIO"
-  - bash -lc "echo \"$audio\""
-  - bash -lc "echo \"$AUDIO\""
-  - echo ${AUDIO}
-  - echo "${AUDIO}"
+  - bash -lc "echo $PLATFORM"
+  - bash -lc "echo $GRAPHICS"
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; ./ci-build.sh"
