--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,8 +17,11 @@ cache:
 build_script:
   - bash -lc "echo $COMPILER"
   - bash -lc "echo $PLATFORM"
-  - bash -lc "echo \"$PLATFORM\""
-  - bash -lc "echo ${PLATFORM}"
-  - bash -lc "echo \"${PLATFORM}\""
+  - bash -lc "echo $MODE"
   - bash -lc "echo $GRAPHICS"
+  - bash -lc "echo $AUDIO"
+  - bash -lc "echo $COLLISION"
+  - bash -lc "echo $NETWORK"
+  - bash -lc "echo $WIDGETS"
+  - bash -lc "echo $EXTENSIONS"
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; ./ci-build.sh"
