--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ cache:
   - CommandLine\emake\.eobjs -> CommandLine\emake
 build_script:
   - bash -lc "echo $COMPILER"
-  - bash -lc "echo $HEYHEYHEY"
+  - bash -lc "echo $PLATFORM"
   - bash -lc "echo $MODE"
   - bash -lc "echo $GRAPHICS"
   - bash -lc "echo $AUDIO"
