--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,8 @@ shallow_clone: true
 # disable automatic tests 
 test: off
 
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 environment:
   matrix:
   #BEGIN WINDOWS
