--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ install:
   - mv ENIGMAsystem/Install ENIGMAsystem/Additional
 
 env:
-  - OUTPUT=/tmp/test
+  global:
+    - OUTPUT=/tmp/test
   matrix:
   #BEGIN LINUX
     # Game Modes
