--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,19 @@
 sudo: required
 dist: trusty
+language: cpp
 
 notifications:
   irc: "chat.freenode.net#enigma"
-
-language: cpp
-
 compiler:
   - gcc
-  
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-6
+      - g++-6
+      - cmake
 before_install:
   - sudo dpkg --add-architecture i386
   - sudo apt-get update
@@ -16,13 +21,11 @@ before_install:
       libdumb1-dev libboost-all-dev libc++-dev libsfml-dev libgtk2.0-dev libbullet-dev libbox2d-dev libgme-dev gcc-multilib 
       g++-multilib libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1-dev libglu1-mesa:i386 libx11-6:i386  libc++-dev:i386
       mingw-w64 wine
-  
   # Ubuntu is a turd
   - sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so
   - sudo ln -s /usr/lib/i386-linux-gnu/libX11.so.6 /usr/lib/i386-linux-gnu/libX11.so
   - sudo ln -s /usr/lib/i386-linux-gnu/libGLU.so.1 /usr/lib/i386-linux-gnu/libGLU.so
   - sudo ln -s /usr/include/x86_64-linux-gnu/zconf.h /usr/include
-  
 install:
   - chmod +x ./ci-build.sh
   - make -j4
@@ -30,7 +33,6 @@ install:
   - curl -L https://github.com/fundies/enigma-libs/files/1347135/enigma-libs.zip > enigma-libs.zip
   - unzip enigma-libs.zip -d ENIGMAsystem/
   - mv ENIGMAsystem/Install ENIGMAsystem/Additional
-
 env:
   global:
     - OUTPUT=/tmp/test
@@ -84,4 +86,3 @@ env:
   #END LINUX
 script:
   - ./ci-build.sh
-
