--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ compiler:
   - gcc
 before_install:
   - sudo dpkg --add-architecture i386
-  - sudo apt-get install gcc-7 gcc-7-multilib g++-7 clang-3.5 build-essential libglu1-mesa-dev zlib1g-dev libalure-dev libvorbisfile3 libvorbis-dev 
+  - sudo apt-get -qq update
+  - sudo apt-get install -y gcc-7 gcc-7-multilib g++-7 clang-3.5 build-essential libglu1-mesa-dev zlib1g-dev libalure-dev libvorbisfile3 libvorbis-dev 
       libdumb1-dev libboost-all-dev libc++-dev libsfml-dev libgtk2.0-dev libbullet-dev libbox2d-dev libgme-dev gcc-multilib 
       g++-multilib libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1-dev libglu1-mesa:i386 libx11-6:i386  libc++-dev:i386
       mingw-w64 wine
