--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,7 +43,7 @@ install:
     mingw-w64-x86_64-libffi mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
   - gcc -v
   - bash -lc "export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'"
-  - cd ${APPVEYOR_BUILD_FOLDER}
+  - cd %APPVEYOR_BUILD_FOLDER%
   - make -j 4
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
 build_script:
