--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,7 +44,7 @@ install:
   - gcc -v
   - cd %APPVEYOR_BUILD_FOLDER%
   - make -j 4
-  - make -j 4 emake
+  - bash -lc "make -j 4 emake"
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
   - export PLATFORM=%PLATFORM%
