--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,8 @@ before_install:
 
 install:
   - chmod +x ./ci-build.sh
-  - if [[ -f "libcompileEGMf.so" ]]; then make -j4; fi
-  - if [[ -f "emake" ]]; then make -j4 emake; fi
+  - if [[ ! -f "libcompileEGMf.so" ]]; then make -j4; fi
+  - if [[ ! -f "emake" ]]; then make -j4 emake; fi
   - curl -L https://github.com/fundies/enigma-libs/files/1347135/enigma-libs.zip > enigma-libs.zip
   - unzip enigma-libs.zip -d ENIGMAsystem/
   - mv ENIGMAsystem/Install ENIGMAsystem/Additional
