--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 dist: trusty
 
-#notifications:
+notifications:
   #irc: "chat.freenode.net#enigma"
 
 language: cpp
@@ -15,6 +15,12 @@ git:
 cache:
   directories:
     - $TRAVIS_BUILD_DIR/cache
+
+jobs:
+  include:
+    - stage: prepare cache
+    - script: make -j4
+              mv libcompileEGMf.so cache/libcompileEGMf.so
 
 before_install:
   # move our cached files back onto the relative path if they exist in the restored cache
@@ -55,8 +61,6 @@ before_install:
 
 install:
   - chmod +x ./ci-build.sh
-  - if [[ ! -f "libcompileEGMf.so" ]]; then make -j4; fi
-  - if [[ ! -f "emake" ]]; then make -j4 emake; fi
   - curl -L https://github.com/fundies/enigma-libs/files/1347135/enigma-libs.zip > enigma-libs.zip
   - unzip enigma-libs.zip -d ENIGMAsystem/
   - mv ENIGMAsystem/Install ENIGMAsystem/Additional
@@ -73,9 +77,3 @@ env:
   #END LINUX
 script:
   - ./ci-build.sh
-before_cache:
-  - mv libcompileEGMf.so cache/libcompileEGMf.so
-  - mv emake cache/emake
-
-after_success:
-  - echo "Hello"
