--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,14 @@ jobs:
     - stage: prepare cache
       before_install: skip
       install: skip
+      cache: false
       script: sudo apt-get -qq -y install libboost-dev libboost-iostreams-dev libboost-filesystem-dev
                    libboost-program-options-dev libboost-system-dev;
               make -j4;
               make -j4 emake;
-              mv libcompileEGMf.so cache/libcompileEGMf.so;
-              mv emake cache/emake;
-              echo "Moving blobs into the cache";
+              mv libcompileEGMf.so cache/;
+              mv emake cache/;
+              echo "Moved blobs into the cache";
 stages:
   - prepare cache
   - test
