--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,12 @@ jobs:
       before_install: skip
       install: skip
       cache: false
+      env: FOO=FOO
       script: sudo apt-get -qq -y install libboost-dev libboost-iostreams-dev libboost-filesystem-dev
                    libboost-program-options-dev libboost-system-dev;
               make -j4;
               make -j4 emake;
+              mkdir cache;
               mv libcompileEGMf.so cache/;
               mv emake cache/;
               echo "Moved blobs into the cache";
