--- a/.travis.yml
+++ b/.travis.yml
@@ -21,12 +21,12 @@ jobs:
     - stage: prepare cache
       before_install: skip
       install: skip
-      cache: false
       env: FOO=FOO
       script: sudo apt-get -qq -y install libboost-dev libboost-iostreams-dev libboost-filesystem-dev
                    libboost-program-options-dev libboost-system-dev;
               make -j4;
               make -j4 emake;
+              rm -f cache;
               mkdir cache;
               mv libcompileEGMf.so cache/;
               mv emake cache/;
